<resources>
    <string name="app_name">Hunted</string>
        <string name="url">http://192.168.0.172:3000/</string>
<!--    <string name="url">https://apihuntedsos.herokuapp.com/</string>-->

    <!-- GENERIC -->
    <string name="label_return_playingfield">Keer terug naar het speelgebied!</string>
    <string name="label_time_remaining">Tijd resterend:</string>
    <string name="label_default_time_remaining">00:00</string>
    <string name="label_messages">Berichten</string>

    <!--  LOGIN  -->
    <string name="label_username">Gebruikersnaam:</string>
    <string name="label_code_login">Code:</string>
    <string name="button_login">Log in</string>
    <string name="label_wrong_login">Combinatie gebruikersnaam en code onjuist!</string>

    <!--  POLICE  -->
    <string name="label_police_header">Politie</string>
    <string name="label_police_locations">Locaties</string>
    <string name="label_police_arrest">Arresteren</string>
    <string name="label_police_score">Ingenomen buit</string>
    <string name="label_police_amount_arrested">Boeven gearresteerd</string>
    <string name="button_police_arrest">Arresteer!</string>
    <string name="label_thief_nearby">Er is 1 boef in de buurt!</string>
    <string name="label_thieves_nearby_front">Er zijn </string>
    <string name="label_thieves_nearby_end"> boeven in de buurt!</string>
    <string name="label_no_thieves_nearby">Er zijn geen boeven in de buurt.</string>
    <string name="label_arrest_succes">De boef is gearresteerd!</string>
    <string name="label_arrest_fail">De boef is ontsnapt!</string>
    <string name="label_police_total_arrested_front">Er zijn </string>
    <string name="label_police_total_arrested_middle"> van de </string>
    <string name="label_police_total_arrested_end"> gearresteerd.</string>
    <string name="label_police_nothing_stolen">Nog geen buit ingenomen</string>

    <!--  THIEVES  -->
    <string name="label_thieves_header">Boeven</string>
    <string name="label_thieves_locations">Locaties</string>
    <string name="label_thieves_scan">Buit scannen</string>
    <string name="label_thieves_arrested">Je bent gearresteerd!</string>
    <string name="label_thieves_loot">Gestolen buit</string>
    <string name="label_thieves_stolen_loot">Gestolen buit:</string>
    <string name="label_thieves_steal_succes">Succesvol gestolen!</string>
    <string name="label_thieves_steal_failure">Gefaald in stelen.</string>
    <string name="label_thieves_steal_stopped">Gestopt met stelen!</string>
    <string name="label_thieves_steal_already_stolen">Deze heb je al gestolen.</string>
    <string name="label_thieves_steal_non_existant">Dit is geen buit.</string>
    <string name="label_thieves_nothing_stolen">Nog geen buit ingenomen</string>
    <string name="label_thieves_steal_retry">Stelen is mislukt, probeer opnieuw.</string>
    <string name="label_thieves_steal_error">Er ging iets mis.</string>

    <!--   Help   -->
    <string name="label_help">Help</string>
    <string name="label_help_map">Probeer tijdens het spel binnen speelveld te blijven. Klik op "locaties" om je huidige locatie en het speelveld te zien.</string>

    <!--   Help(Police)   -->
    <!--   kaart, arresteren, ingenomen buit-->
    <string name="label_help_arrest">Wanneer je als agent in de buurt van een boef bent, dan kan je bij "arresteren" op de knop klikken om deze te arresteren. Als de boef op dat moment gestolen buit heeft dan neem jij deze in beslag.</string>
    <string name="label_help_overview">Klik op "ingenomen buit" om te bekijken hoeveel buit je hebt afgepakt en hoe lang het spel nog duurt.</string>

    <!--   Help(Thieves)   -->
    <!--   kaart, buit stelen, gestolen buit-->
    <string name="label_help_steal">Wanneer je een QR-code hebt gevonden, ga dan naar "buit scannen".</string>
    <string name="label_help_loot_stolen">Bij "gestolen buit" zie je welke buit je hebt gestolen en hoe lang het spel nog duurt.</string>


    <!--  RepeatingTaskService  -->
    <string name="label_service_status_fail">Er ging iets mis met het ophalen van je status.</string>
    <string name="label_service_server_fail">Er ging iets mis met het communiceren met de server.</string>
    <string name="label_service_thief_direction_fail">Er ging iets mis met het ophalen van de richting van boeven.</string>
    <string name="label_service_thief_loading_fail">Er ging iets mis met laden van de boeven.</string>
    <string name="minutes">minuten</string>
</resources>