<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_map"
            android:title="@string/label_thieves_locations"
            android:checked="true"/>
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_scanner"
            android:title="@string/label_thieves_scan" />
        <item
            android:id="@+id/nav_stolen"
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            android:title="@string/label_thieves_loot" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help"
            android:title="@string/label_help" />
    </group>
</menu>