<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_police_help"
    android:layout_gravity="top"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_help_map"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/onPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_help_arrest"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/onPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_help_overview"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/onPrimary"/>

</LinearLayout>