<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/fragment_thieves_loot_score"
    android:background="@color/primary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_thieves_stolen_loot"
        android:textSize="28dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/onPrimary"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/loot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time_remaining"
        android:textSize="28dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/onPrimary"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:text="@string/label_default_time_remaining" />

</LinearLayout>