<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:textSize="32dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/username_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_code_login"
        android:textSize="32dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/code_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/login"
        android:text="@string/button_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/thieves"/>
</LinearLayout>
